fixed arrows in mobile not showing up when non-soundcloud

--- a/style.less
+++ b/style.less
@@ -400,7 +400,7 @@ html.touch {
         bottom: 166px;
     }
 
-    &.show-widget {
+    &.show-arrows {
         .arrow, .arrow:hover {
             .transition(opacity 2s ease-in);
             opacity: .5
